--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--index.html is a1.html-->
+
 <head>
     <title>XeBooking</title>
     <link rel="icon" href="img/Logo/icon.png">
@@ -24,55 +25,58 @@
         </script>
     </span>
 
-    <div class="container-fluid bg-1 text-center">
+    <div class="container-fluid bg-1 text-center" id="a1-div-form">
         <h1>BOOK BUS TICKET</h1>
-
-        <div class="container justify-content-center align-content-center" id="a1-form">
-            <div class="row">
-                <div class="col-1"></div>
-                <div class="col-2">
+        <!-- <div class="container justify-content-center align-content-center" id="a1-form">
+            <div class="row d-flex">
+                <div class="col-1 "></div>
+                <div class="col-2 align-self-center">
                     <div class="custom-control custom-radio custom-control-inline">
                         <input type="radio" class="my-control-input custom-control-input" id="customRadio-OneWay"
-                            name="a1-type-trip" value="1">
+                            name="a1-type-trip" value="1" checked>
                         <label class="custom-control-label" for="customRadio-OneWay">One Way</label>
                     </div>
                 </div>
-                <div class="col-2">
-                    <form class="form-horizontal">
-
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="my-control-input custom-control-input" id="customRadio-RoundTrip"
-                                name="a1-type-trip" value="2">
-                            <label class="custom-control-label" for="customRadio-RoundTrip">Round Trip</label>
-                    </form>
+                <div class="col-2 align-self-center">
+                    <div class="custom-control custom-radio custom-control-inline">
+                        <input type="radio" class="my-control-input custom-control-input" id="customRadio-RoundTrip"
+                            name="a1-type-trip" value="2">
+                        <label class="custom-control-label" for="customRadio-RoundTrip">Round Trip</label>
+                    </div>
+                    <br>
                 </div>
-                <br>
             </div>
-        </div>
-        <div id="a1-row-div-form" class="row align-content-center justify-content-center">
-            <div class="col-md-2 col-sm-4">
-                <input type="text" class="form-control-plaintext control-inline my-inpyt-text" placeholder="From">
-            </div>
-            <i style="margin:auto 2px" class="fas fa-exchange-alt" aria-hidden="true"></i>
-            <div class="col-md-2 col-sm-4">
-                <input type="text" class="form-control-plaintext control-inline my-inpyt-text" placeholder="To">
-            </div>
-            <div class="col-md-3 col-sm-4">
-                <label class="form-check-label" for="bday">Departure Day</label>
-                <input type="date" id="departureday" max="3000-12-31" min="1000-01-01" class="form-control">
-            </div>
-            <div class="col-md-3 col-sm-4">
-                <label class="form-check-label" for="bday">Return Day</label>
-                <input type="date" name="returnday" max="3000-12-31" min="1000-01-01" class="form-control">
+            <div id="a1-row-div-form" class="row align-content-center justify-content-center">
+                <div class="col-md-2 col-sm-4">
+                    <input type="text" class="form-control-plaintext control-inline my-inpyt-text" placeholder="From">
+                </div>
+                <i style="margin:auto 2px" class="fas fa-exchange-alt" aria-hidden="true"></i>
+                <div class="col-md-2 col-sm-4">
+                    <input type="text" class="form-control-plaintext control-inline my-inpyt-text" placeholder="To">
+                </div>
+                <div class="col-md-3 col-sm-4">
+                    <label class="form-check-label" for="bday">Departure Day</label>
+                    <input id="a1-departureday" type="date" id="departureday" max="3000-12-31" min="1000-01-01" class="form-control">
+                </div>
+                <div class="col-md-3 col-sm-4">
+                    <label class="form-check-label" for="bday">Return Day</label>
+                    <input id="a1-returnday" type="date" name="returnday" max="3000-12-31" min="1000-01-01" class="form-control" disabled>
 
+                </div>
+                <div class="col-md-1 col-sm-5">
+                    <button id="a1-search-button" type="button" class="btn btn-primary">Search</button>
+                </div>
             </div>
-            <div class="col-md-1 col-sm-5">
-                <button id="a1-search-button" type="button" class="btn btn-primary">Search</button>
-            </div>
-        </div>
+
+        </div> -->
+        <span id="searchform-container" class="d-flex align-content-centera justify-content-center">
+            <script id="searchform-template" type="text/x-handlebars-template">
+                {{> searchformPartial}}
+            </script>
+        </span>
+
     </div>
 
-    </div>
 
     </div>
     <br>
@@ -165,6 +169,7 @@
     <script src="js/handlebars-v4.1.2.js"></script>
     <script src="js/a1.js"></script>
     <script src="js/nav-guess-input.js"></script>
+    <script src="js/searchform.js"></script>
 
 </body>
 
