add page profile

--- a/public/b1_log-in.html
+++ b/public/b1_log-in.html
@@ -37,7 +37,7 @@
                 <div class="b1-line"></div>
 
                 <div class="container">
-                    <form action="get">
+                    <form action="b3_profile.html">
                         <input type="text" placeholder="Your username or email" name="uname" required>
 
                         <input type="password" placeholder="Your password" name="psw" required>
@@ -51,7 +51,9 @@
                         </div>
                         <span class="psw"> <a href="#">Forgot your password?</a></span>
                         <br>
-                        <button type="submit" class="btn btn-primary btn-custom">Log in</button>
+                        <button type="submit" class="btn btn-primary btn-custom">
+                            Log in
+                        </button>
 
                     </form>
                     <br>
