--- a/public/index.html
+++ b/public/index.html
@@ -89,13 +89,13 @@
             <ul class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <!-- <li data-target="#myCarousel" data-slide-to="2"></li> -->
             </ul>
 
             <!-- The slideshow -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="container">
+                    <div class="container-fluid">
                         <div class="row">
                             <div class="col-4">
                                 <img src="img/A1/1.jpg" alt="Los Angeles" width="1100" height="500">
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="container">
+                    <div class="container-fluid">
                         <div class="row">
                             <div class="col-4">
                                 <img src="img/A1/4.jpg" alt="Los Angeles" width="1100" height="500">
