--- a/public/b3_profile.html
+++ b/public/b3_profile.html
@@ -20,8 +20,8 @@
 <body id="a1-body">
     <div class="a1-overlay"></div>
     <span id="nav-container">
-        <script id="navbar-guess-template" type="text/x-handlebars-template">
-            {{> navbarGuessPartial}}
+        <script id="navbar-user-template" type="text/x-handlebars-template">
+            {{> navbarUserPartial}}
         </script>
     </span>
 
@@ -119,7 +119,7 @@
     <script src="js/handlebars-v4.1.2.js"></script>
     <script src="js/a1.js"></script>
     <script src="js/b3.js"></script>
-    <script src="js/nav-guess-input.js"></script>
+    <script src="js/nav-user-input.js"></script>
 </body>
 
 </html>
