--- a/public/a2-detail.html
+++ b/public/a2-detail.html
@@ -419,6 +419,13 @@
                                 <script id="searchResult-template" type="text/x-handlebars-template">
                                     {{> searchResultPartial}}
                                 </script>
+                                <ul class="pagination">
+                                        <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                                </ul>
                             <!-- <div class="container  text-center" id="search-table-result">
                                 <div class="row table-header">
                                     <div class="col-2">Liscense Plate</div>
@@ -762,6 +769,7 @@
                         </div>
                     </div>
                 </div>
+            
     </div>
     
 
