adjust login, profile, contact us

--- a/public/a3_contact-us.html
+++ b/public/a3_contact-us.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/a1.css">
     <link rel="stylesheet" href="css/a3.css">
     <!-- font awsome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -49,7 +50,7 @@
                     <div class="map-responsive">
                         <iframe
                             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Khoa-hoc-tu-nhien"
-                            width="100%" height="250px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            width="100%" height="190px" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                     
                     <br>
@@ -59,7 +60,7 @@
                 <div class="col-md-1 col-sm-0"></div>
                 <div class="col-md-6 col-sm-12 panel-right a3-form">
                     <form action="">
-                        <br>
+                        
                         <h4>Full name</h4>
                         <input type="text" name="name" placeholder="Your Name" />
                         <br>
@@ -69,7 +70,7 @@
                         <input type="tel" name="phone" placeholder="Your Phone Number" />
                         <br>
                         <h4>What are you concerned about?</h4>
-                        <textarea name="text" id="" rows="7" placeholder="Your Message"></textarea>
+                        <textarea name="text" id="" rows="5" placeholder="Your Message"></textarea>
                         <br>
                         <button class="btn btn-primary">Send</button>
                     </form>
