--- a/public/b2_sign-up.html
+++ b/public/b2_sign-up.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/a1.css">
     <link rel="stylesheet" href="css/b1.css">
     <link rel="stylesheet" href="css/b2.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
@@ -26,7 +27,7 @@
     <div class="container">
         <div class="row justify-content-center align-content-center">
 
-            <div class="col-5 b1-form">
+            <div class="col-lg-5 col-md-8 col-sm-10 b1-form">
                 <div class="b1-title-left">
                     <a href="b2_sign-up.html">Sign up</a>
                 </div>
