--- a/public/c3_report.html
+++ b/public/c3_report.html
@@ -61,21 +61,33 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-2">
-                        <a href="" id="sign-ups">
+                        <a href="" id="sign-ups" class="box">
                             <img class="c3-img" src="img/C3/1.jpg" alt="">
-
+                            <div class="text">
+                                <div id="num-signup">1.000.000</div>
+                                Online signups
+                            </div>
                         </a>
-                        <a href="" id="last-month-sales">
+                        <a href="" id="last-month-sales" class="box">
                             <img class="c3-img" src="img/C3/2.jpg" alt="">
-
+                            <div class="text">
+                                <div id="num-sale">$100.000</div>
+                                Last month sales
+                            </div>
                         </a>
-                        <a href="" id="new-visitors">
+                        <a href="" id="new-visitors" class="box">
                             <img class="c3-img" src="img/C3/3.jpg" alt="">
-
+                            <div class="text">
+                                <div id="num-visit">100.000</div>
+                                New visit this month
+                            </div>
                         </a>
-                        <a href="" id="total-revenue-month">
+                        <a href="" id="total-revenue-month" class="box">
                             <img class="c3-img" src="img/C3/4.jpg" alt="">
-
+                            <div class="text">
+                                <div id="num-revenue">$1.000.000</div>
+                                Total revenue this month
+                            </div>
                         </a>
                     </div>
 
@@ -97,17 +109,27 @@
                     <div class="col-lg-4 block-right">
                         <div id="user-visit-book" class="c3-form">
                             <div id="chart_donut"></div>
-                            <br><br><br><br><br>
+                            <br>
+                            <div class="title-donut">Users visit then book bus</div>
+                            <div class="subtitle-donut">Calculated from May 1st to Now</div>
+                            <a href="#" class="btn btn-primary">REFRESH</a>
+                            <br>
+                            
                         </div>
 
                         <div id="bus-type" class="c3-form">
                             <div id="chart_bustype"></div>
-                            <br><br><br><br><br>
+                            <br>
+                            <div class="title-donut">Bus type used most</div>
+                            <div class="subtitle-donut">Calculated from May 1st to Now</div>
+                            <a href="#" class="btn btn-primary">REFRESH</a>
+                            <br>
                         </div>
 
                         <div id="bus-route" class="c3-form">
+                            <div class="title-chart">Bus route booked most</div>
                             <div id="chart_busroute"></div>
-                            <br><br><br><br><br><br>
+                            <br><br><br><br><br>
                             <div id="paddingbot" ></div>
                         </div>
                     </div>
