--- a/public/b2_sign-up.html
+++ b/public/b2_sign-up.html
@@ -38,7 +38,7 @@
                 <div class="b1-line"></div>
 
                 <div class="container">
-                    <form action="b3_profile.html">
+                    <form action="b3_profile_history.html">
                         <input type="text" placeholder="Your username or email" name="uname" required>
 
                         <input type="text" placeholder="Your email" id="IDemail" name="email" required>
