--- a/public/b3_profile_history.html
+++ b/public/b3_profile_history.html
@@ -128,7 +128,7 @@
                     </form>
                 </div>
                 <!-- history -->
-                <div id="b3-history" class="col-md-8 col-sm-12 panel-right a3-form b3-fixed-height hidden">
+                <div id="b3-history" class="col-md-8 col-sm-12 panel-right border b3-fixed-height hidden">
                     <div id="userHistory-container">
                         <script id="userHistory-template" type="text/x-handlebars-template">
                             {{> userHistoryPartial}}
