add master data

--- a/public/c3_report.html
+++ b/public/c3_report.html
@@ -55,7 +55,7 @@
         </div> 
         -->
         <div class="tab-pane fade show active" id="nav-report" role="tabpanel">
-            <div class="container-fluid">
+            <div class="container-fluid-custom">
                 <div class="row">
                     <div class="col-lg-2">
                         <a href="" id="sign-ups" class="box">
