adjust master data

--- a/public/c1_master-data.html
+++ b/public/c1_master-data.html
@@ -22,8 +22,8 @@
 <body id="a1-body">
     <div class="a1-overlay"></div>
     <span id="nav-container">
-        <script id="navbar-user-template" type="text/x-handlebars-template">
-            {{> navbarUserPartial}}
+        <script id="navbar-admin-template" type="text/x-handlebars-template">
+            {{> navbarAdminPartial}}
         </script>
     </span>
 
@@ -185,7 +185,7 @@
     <script src="js/handlebars-v4.1.2.js"></script>
     <script src="js/a1.js"></script>
     <script src="js/b3.js"></script>
-    <script src="js/nav-user-input.js"></script>
+    <script src="js/nav-admin-input.js"></script>
 
     <link href="dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
     <script src="dist/js/datepicker.min.js"></script>
