--- a/public/c3_report.html
+++ b/public/c3_report.html
@@ -32,7 +32,7 @@
                 <nav>
                     <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
                         <a class="nav-item nav-link " id="nav-home-tab" href="c1_master-data.html">Master Data</a>
-                        <a class="nav-item nav-link" id="nav-profile-tab" href="#nav-transaction">Transaction</a>
+                        <a class="nav-item nav-link" id="nav-profile-tab" href="c2_transaction.html">Transaction</a>
                         <a class="nav-item nav-link active" id="nav-contact-tab" href="c3_report.html">Report</a>
                     </div>
                 </nav>
@@ -124,7 +124,7 @@
                         </div>
 
                         <div id="bus-route" class="c3-form">
-                            <div class="title-chart">Bus route booked most</div>
+                            <div class="title-chart">Bus route booked most from May 1st to Now</div>
                             <div id="chart_busroute"></div>
                             <br><br><br><br><br>
                             <div id="paddingbot"></div>
