--- a/public/b1_log-in.html
+++ b/public/b1_log-in.html
@@ -8,7 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
+    
     <link rel="stylesheet" href="css/a1.css">
+    
     <link rel="stylesheet" href="css/b1.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
     <!-- font awsome -->
@@ -43,13 +45,12 @@
 
                         <input type="password" placeholder="Your password" name="psw" required>
 
-                        <div id="remember-me" class="pretty p-svg p-curve">
-                            <input type="checkbox" name="remember" />
-                            <div class="state">
-                                <img class="svg" src="img/icon/baseline-check_box-24px.svg">
-                                <label>Remember me</label>
-                            </div>
+                        <div class="custom-control custom-checkbox custom-control" id="remember">
+                            <input type="checkbox" class="my-control-input custom-control-input my-checkbox" id="remember-me"
+                                name="remember">
+                            <label class="custom-control-label" for="remember-me">Remember me</label>
                         </div>
+
                         <span class="psw"> <a href="#">Forgot your password?</a></span>
                         <br>
                         <button type="submit" class="btn btn-primary btn-custom">
@@ -92,7 +93,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
+   
 </body>
 
 </html>
