update date time picker, update js for a2

--- a/public/c1_master-data.html
+++ b/public/c1_master-data.html
@@ -96,7 +96,7 @@
                                     <div class="col-6">
                                         <div class="input-date">
                                             <input placeholder="From" id="searchform-departureday" type="text"
-                                            class="datepicker-here" data-language='en' data-multiple-dates="3"
+                                            class="datepicker-here form-control" data-language='en' data-multiple-dates="3"
                                             data-multiple-dates-separator=", " data-position='top left' />
                                             <i class="far fa-calendar-alt icon-date"></i>
                                         </div>
@@ -105,7 +105,7 @@
                                     <div class="col-6">
                                         <div class="input-date">
                                                 <input placeholder="To" id="searchform-returnday" type="text"
-                                                class="datepicker-here" data-language='en' data-multiple-dates="3"
+                                                class="datepicker-here form-control" data-language='en' data-multiple-dates="3"
                                                 data-multiple-dates-separator=", " data-position='top left' />
                                                 <i class="far fa-calendar-alt icon-date"></i>
                                         </div>
