--- a/public/a2-detail.html
+++ b/public/a2-detail.html
@@ -13,6 +13,8 @@
     <!-- font awsome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link href="dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
+    
 
 
 </head>
