add footer handlebars

--- a/public/a2-detail.html
+++ b/public/a2-detail.html
@@ -765,6 +765,12 @@
                 </div>
             
     </div>
+
+    <span id="footer-container">
+        <script id="footer-template" type="text/x-handlebars-template">
+            {{> footerPartial}}
+        </script>
+    </span>
     
 
     <script src="js/jquery.min.js"></script>
@@ -774,6 +780,7 @@
     <script src="js/searchform.js"></script>
     <script src="js/a2.js"></script>
     <script src="js/search-result.js"></script>
+    <script src="js/footer.js"></script>
 </body>
 
 </html>
