--- a/public/a3_contact-us.html
+++ b/public/a3_contact-us.html
@@ -80,13 +80,18 @@
     </div>
 
 
-
+    <span id="footer-container">
+        <script id="footer-template" type="text/x-handlebars-template">
+            {{> footerPartial}}
+        </script>
+    </span>
 
     <script src="js/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="js/handlebars-v4.1.2.js"></script>
     <script src="js/a1.js"></script>
     <script src="js/nav-guess-input.js"></script>
+    <script src="js/footer.js"></script>
 
 </body>
 
