--- a/public/b3_profile_history.html
+++ b/public/b3_profile_history.html
@@ -144,6 +144,11 @@
     </div>
     </div>
 
+    <span id="footer-container">
+        <script id="footer-template" type="text/x-handlebars-template">
+            {{> footerPartial}}
+        </script>
+    </span>
 
     <script src="js/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -152,6 +157,7 @@
     <script src="js/b3.js"></script>
     <script src="js/nav-user-input.js"></script>
     <script src="js/user-history.js"></script>
+    <script src="js/footer.js"></script>
 </body>
 
 </html>
