--- a/public/index.html
+++ b/public/index.html
@@ -163,6 +163,11 @@
 
     </div>
 
+    <span id="footer-container">
+        <script id="footer-template" type="text/x-handlebars-template">
+            {{> footerPartial}}
+        </script>
+    </span>
 
     <script src="js/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -170,6 +175,7 @@
     <script src="js/a1.js"></script>
     <script src="js/nav-guess-input.js"></script>
     <script src="js/searchform.js"></script>
+    <script src="js/footer.js"></script>
 
 </body>
 
