--- a/public/c3_report.html
+++ b/public/c3_report.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/a1.css">
     <link rel="stylesheet" href="css/c3.css">
+    <link rel="stylesheet" href="css/a2.css">
+
 
     <!-- font awsome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -30,10 +32,10 @@
         <div class="row justify-content-center align-content-center">
             <div class="col-6">
                 <nav>
-                    <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                        <a class="nav-item nav-link " id="nav-home-tab" href="c1_master-data.html">Master Data</a>
-                        <a class="nav-item nav-link" id="nav-profile-tab" href="c2_transaction.html">Transaction</a>
-                        <a class="nav-item nav-link active" id="nav-contact-tab" href="c3_report.html">Report</a>
+                    <div class="nav nav-tabs a2-nav-link nav-fill" id="nav-tab" role="tablist">
+                        <a class="nav-item nav-link a2-nav-link " id="nav-home-tab" href="c1_master-data.html">Master Data</a>
+                        <a class="nav-item nav-link a2-nav-link" id="nav-profile-tab" href="c2_transaction.html">Transaction</a>
+                        <a class="nav-item nav-link a2-nav-link active" id="nav-contact-tab" href="c3_report.html">Report</a>
                     </div>
                 </nav>
             </div>
